<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/pop_bg"
        android:gravity="center"
        android:padding="16dp"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ProgressBar
            android:id="@+id/progress"
            style="android:attr/progressBarStyleLarge"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/LoginWord"
                android:fontFamily="@font/ubuntu"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface ="sans"/>

            <EditText
                android:id="@+id/login_emailid"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/emailidsymbol"
                android:drawablePadding="8dp"
                android:fontFamily="@font/ubuntu"
                android:gravity="center_vertical"
                android:hint="@string/emailid"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="16sp"
                android:typeface ="sans"/>


            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/passwordsymbol"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/userpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:fontFamily="@font/ubuntu"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="16sp"
                android:typeface="sans" />


            <Button
                android:id="@+id/login"
                android:layout_width="200dp"
                android:onClick="loginClick"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/ubuntu"
                android:text="@string/login_text"
                android:textColor="#FFF"
                android:textStyle="bold" />

            <TextView
                android:text="@string/or_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/ubuntu"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/reg_link"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/registration"
            android:fontFamily="@font/ubuntu"
            android:textColor="#FFF"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
