<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/pop_bg"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".RegistrationActivity">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/acct_login_form"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="SIGN UP"
                android:fontFamily="@font/ubuntu"
                android:textColor="#FFF"
                android:textSize="25sp"
                android:textStyle="bold" />



            <EditText
                android:id="@+id/FirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/user"
                android:fontFamily="@font/ubuntu"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/FirstName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/LastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:fontFamily="@font/ubuntu"
                android:gravity="center_vertical"
                android:hint="@string/LastName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/userEmailId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/emailidsymbol"
                android:fontFamily="@font/ubuntu"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/emailid"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="16sp" />




            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/passwordsymbol"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/EnterPassoword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/passwordsymbol"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/ConfirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:textSize="16sp" />



            <Button
                android:id="@+id/Button5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:onClick="register"
                android:text="@string/SignUp"
                android:fontFamily="@font/ubuntu"
                android:textColor="#FFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/linkredirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? Log in here!"
                android:textColor="#FFF"
                android:fontFamily="@font/ubuntu"
                android:onClick="redirect"
                android:textSize="20sp"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
